# XML-Game

./: CMakeLists.txt  ProjectApp.cpp  ProjectApp.h  README.md  main.cpp  pch.h
Data/: uml.xml
ProjectLib/: Bob.cpp  Bob.h  BoostSpeedVisitor.cpp  BoostSpeedVisitor.h  CMakeLists.txt  ClearScreenPU.cpp  ClearScreenPU.h  DropDown.cpp  DropDown.h  DropDownVisitor.cpp  DropDownVisitor.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GreenMarker.cpp  GreenMarker.h  Harold.cpp  Harold.h  HaroldImage.cpp  HaroldImage.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  LaunchVisitor.cpp  LaunchVisitor.h  MainFrame.cpp  MainFrame.h  Marker.cpp  Marker.h  Message.cpp  Message.h  MessageGettingVistior.cpp  MessageGettingVistior.h  RedMarker.cpp  RedMarker.h  Scoreboard.cpp  Scoreboard.h  SpeedBoost.cpp  (+7 more)
Tests/: CMakeLists.txt  DropDownTest.cpp  EmptyTest.cpp  GameTest.cpp  ItemTest.cpp  ScoreboardTest.cpp  SpeedBoostTest.cpp
